refactor: Prettier format

--- a/angular.json
+++ b/angular.json
@@ -44,24 +44,14 @@
             "outputPath": "dist/fem-product-preview-card-component",
             "index": "src/index.html",
             "browser": "src/main.ts",
-            "polyfills": [
-              "zone.js"
-            ],
+            "polyfills": ["zone.js"],
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
-            "assets": [
-              "src/favicon-32x32.png",
-              "src/assets"
-            ],
+            "assets": ["src/favicon-32x32.png", "src/assets"],
             "stylePreprocessorOptions": {
-              "includePaths": [
-                "src/styles"
-              ]
+              "includePaths": ["src/styles"]
             },
-            "styles": [
-              "src/styles.scss",
-              "src/reset.css"
-            ],
+            "styles": ["src/styles.scss", "src/reset.css"],
             "scripts": []
           },
           "configurations": {
@@ -115,43 +105,27 @@
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
           "options": {
-            "polyfills": [
-              "zone.js",
-              "zone.js/testing"
-            ],
+            "polyfills": ["zone.js", "zone.js/testing"],
             "tsConfig": "tsconfig.spec.json",
             "inlineStyleLanguage": "scss",
-            "assets": [
-              "src/favicon-32x32.png",
-              "src/assets"
-            ],
+            "assets": ["src/favicon-32x32.png", "src/assets"],
             "stylePreprocessorOptions": {
-              "includePaths": [
-                "src/styles"
-              ]
+              "includePaths": ["src/styles"]
             },
-            "styles": [
-              "src/styles.scss",
-              "src/reset.css"
-            ],
+            "styles": ["src/styles.scss", "src/reset.css"],
             "scripts": []
           }
         },
         "lint": {
           "builder": "@angular-eslint/builder:lint",
           "options": {
-            "lintFilePatterns": [
-              "src/**/*.ts",
-              "src/**/*.html"
-            ]
+            "lintFilePatterns": ["src/**/*.ts", "src/**/*.html"]
           }
         }
       }
     }
   },
   "cli": {
-    "schematicCollections": [
-      "@angular-eslint/schematics"
-    ]
+    "schematicCollections": ["@angular-eslint/schematics"]
   }
 }
